[package]
name = "doku-derive"
version = "0.9.0"
authors = ["Patryk Wychowaniec <patryk.wychowaniec@anixe.pl>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.13", features = ["diagnostics"] }
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
indoc = "0.3"
pretty_assertions = "0.6"
