[package]
name = "doku-derive"
version = "0.2.0-alpha.1"
authors = ["Athanasios Katsios <aka@anixe.io>", "Patryk Wychowaniec <patryk.wychowaniec@anixe.pl>"]
license = "MIT"
edition = "2018"
description = "A framework for building documentation (internal macro)"
readme = false
repository = "https://github.com/anixe/doku"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
indoc = "0.3"
