[package]
name = "doku"
version = "0.12.0"
authors = ["Patryk Wychowaniec <patryk.wychowaniec@anixe.pl>"]
license = "MIT"
edition = "2018"
description = "A framework for building documentation"
readme = "../README.md"
repository = "https://github.com/anixe/doku"
keywords = ["doc", "docs", "documentation", "serialization"]

[dependencies]
chrono = { version = "0.4", optional = true }
doku-derive = { version = "=0.12.0", path = "../doku-derive" }
serde = "1.0"
serde_json = "1.0"
url = { version = "2", optional = true }

[features]
chrono-04 = ["chrono"]
url-2 = ["url"]

[dev-dependencies]
difference = "2.0"
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
test-case = "1.2"
